--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </div>
   </main>
   <section aria-label="experiencia" class="experiencia" id="experiencia">
-    <h2 class="subtitulo">Experiências<strong class="verde">.</strong></h2>
+    <h2 class="subtitulo">Experiencia<strong class="verde">.</strong></h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos como Camisety utilizando apenas <strong class="verde">HTML</strong>, <strong class="verde">CSS</strong> e <strong class="verde">JavaScript</strong>. Para aplicativos web como a rede Social Cats, eu trabalhei no <strong class="verde">UX</strong> e <strong class="verde">UI Design</strong> do projeto.</p>
+      <p class="experiencia-texto">Desenvolvo pequenos projetos como Bikelife utilizando apenas <strong class="verde">HTML</strong>, <strong class="verde">CSS</strong> e <strong class="verde">JavaScript</strong>. Para aplicativos web como a rede Social Cats, eu também trabalhei em <strong class="verde">UX</strong> e <strong class="verde">UI Design</strong> do projeto.</p>
       <div class="empresa">
-        <span class="empresa-ano">2018</span>
+        <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">BikeLife</h3>
         <span class="empresa-titulo">Desenvolvedor Jr</span>
-        <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
+        <p class="empresa-texto">Desenvolvi o Bikelife utilizando apenas HTML, CSS e JavaScript.</p>
         <ul class="empresa-lista">
           <li>JavaScript</li>
           <li>Html</li>
@@ -46,7 +46,7 @@
         </ul>
       </div>
       <div class="empresa">
-        <span class="empresa-ano">2015</span>
+        <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">Sufbot</h3>
         <span class="empresa-titulo">Desenvolvedor Jr</span>
         <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
@@ -57,7 +57,7 @@
         </ul>
       </div>
       <div class="empresa">
-        <span class="empresa-ano">2012</span>
+        <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">brafe</h3>
         <span class="empresa-titulo">Desenvolvedor Jr</span>
         <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
@@ -73,9 +73,9 @@
   </section>
   <section class="formacao" id="formacao" aria-label="formação">
     <div class="formacao-cont">
-      <h2 class="subtitulo">Formção<strong class="verde">.</strong></h2>
+      <h2 class="subtitulo">Cursos<strong class="verde">.</strong></h2>
       <div>
-        <p class="formacao-texto">Minha mais recente experiência acadêmica foi o mestrado 🎓 que fiz no exterior em UX Design. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
+        <p class="formacao-texto">Me mantenho sempre atualizado com cursos intensivos online.</p>
         <ul class="faculdade-lista">
           <li class="faculdade">
             <span class="faculdade-tipo">Bacharel</span>
