--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </main>
   <section aria-label="experiencia" class="experiencia" id="experiencia">
-    <h2 class="subtitulo">Experiencia<strong class="verde">.</strong></h2>
+    <h2 class="subtitulo">Projetos<strong class="verde">.</strong></h2>
     <div>
       <p class="experiencia-texto">Desenvolvo pequenos projetos como Bikelife utilizando apenas <strong class="verde">HTML</strong>, <strong class="verde">CSS</strong> e <strong class="verde">JavaScript</strong>. Para aplicativos web como a rede Social Cats, eu também trabalhei em <strong class="verde">UX</strong> e <strong class="verde">UI Design</strong> do projeto.</p>
       <div class="empresa">
@@ -62,7 +62,6 @@
         <span class="empresa-titulo">Desenvolvedor Jr</span>
         <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
         <ul class="empresa-lista">
-          <li>Email markting</li>
           <li>Html</li>
           <li>css</li>
           <li>Ux Design</li>
@@ -73,24 +72,24 @@
   </section>
   <section class="formacao" id="formacao" aria-label="formação">
     <div class="formacao-cont">
-      <h2 class="subtitulo">Cursos<strong class="verde">.</strong></h2>
+      <h2 class="subtitulo">Experiencia<strong class="verde">.</strong></h2>
       <div>
-        <p class="formacao-texto">Me mantenho sempre atualizado com cursos intensivos online.</p>
+        <p class="formacao-texto">Empresas na qual trabalhei e cursos intensivos online.</p>
         <ul class="faculdade-lista">
           <li class="faculdade">
-            <span class="faculdade-tipo">Bacharel</span>
-            <h3 class="faculdade-curso">Administracao de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
+            <span class="faculdade-tipo">Alfa Software</span>
+            <h3 class="faculdade-curso">Analista De Negocios | UI/UX Design</h3>
+            <span class="faculdade-instituicao">ERP, Recursos Adobe e Figma</span>
           </li>
           <li class="faculdade">
-            <span class="faculdade-tipo">Bacharel</span>
-            <h3 class="faculdade-curso">Administracao de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
+            <span class="faculdade-tipo">ISBET</span>
+            <h3 class="faculdade-curso">Jovem Aprendiz</h3>
+            <span class="faculdade-instituicao">Sistemas e arquivos</span>
           </li>
           <li class="faculdade">
-            <span class="faculdade-tipo">Bacharel</span>
-            <h3 class="faculdade-curso">Administracao de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
+            <span class="faculdade-tipo">Freelancer</span>
+            <h3 class="faculdade-curso">Designer Grafico</h3>
+            <span class="faculdade-instituicao">Recusos Adobe</span>
           </li>
         </ul>
         <div class="formacao-extra">
